fixing proposal block wrapping

--- a/app/assets/stylesheets/rahvakogu.css.scss
+++ b/app/assets/stylesheets/rahvakogu.css.scss
@@ -124,10 +124,10 @@ box-shadow: 0px 1px 2px 0px rgba(0, 0, 0, 0.2);}
 
 #proposal{float:left; width:920px; padding:20px 20px 0 20px; background:#eeeeee; -webkit-border-radius:5px; border-radius:5px; margin:0 0 40px 0;  font-family:OpenSansRegular;}
 #proposal h1{float:left; width:960px; margin:0 -20px 24px -20px; padding:0 0 16px 0; text-align:center; font-family:OpenSansRegular; font-size:18px; line-height:24px; font-weight:normal; border-bottom:#dddddd 2px solid;}
-#proposal .column{float:left; width:160px; margin-right:30px; margin-bottom:25px;}
+#proposal .column{float:left; width:160px; margin-right:23px; margin-bottom:25px;}
 #proposal .column.last-child{margin:0; float:right;}
 #proposal .column h2, #proposal .column h2 a {margin:0 0 8px 0; font-family:Bebas; font-weight:normal; color:#0077bb; font-size:24px; line-height:24px; text-decoration:underline;}
-#proposal .column p{font-size:12px; line-height:18px; color:#777777; margin:0 0 17px 0;}
+#proposal .column p{font-size:12px; line-height:18px; color:#777777; margin:0;}
 #proposal .column a{font-family:OpenSansBold; color:#0077bb; font-size:12px;}
 #proposal .button{display:block; clear:both; width:214px; background:#cc0000; color:#fff; text-align:center; text-decoration:none; height:49px; line-height:49px; -webkit-border-radius:99px; border-radius:99px; margin:0 auto -23px auto;
 -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.2);
